feat: Implement admin dashboard

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,5 +1,8 @@
-# Copia este archivo a .env.local y agrega tu API key de Gemini
-# Obtén tu API key en: https://aistudio.google.com/apikey
-# IMPORTANTE: En Vite, las variables deben tener el prefijo VITE_ para estar disponibles en el cliente
-
-VITE_GEMINI_API_KEY=tu_api_key_aqui
+VITE_ADMIN_USERNAME=""
+VITE_ADMIN_PASSWORD=""
+KV_URL=""
+KV_REST_API_URL=""
+KV_REST_API_TOKEN=""
+KV_REST_API_READ_ONLY_TOKEN=""
+REDIS_URL=""
+VITE_ADMIN_API_KEY=""
