--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jspdf-autotable": "^5.0.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "latest",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
