--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,3 @@
 {
-  "regions": ["fra1", "cdg1"],
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ],
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "framework": "vite"
+  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
 }
