--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vercel/kv": "latest",
     "@vercel/postgres": "^0.10.0",
     "bcryptjs": "^3.0.3",
+    "cookie": "^1.1.0",
     "dotenv": "^17.2.3",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.3",
@@ -27,10 +28,14 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
     "@types/node": "^22.14.0",
     "@vercel/node": "^5.5.4",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.22",
     "markdown-pdf": "^11.0.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
