--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/cookie": "^0.6.0",
     "@types/node": "^22.14.0",
     "@vercel/node": "^5.5.4",
