--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,6 @@
       "schedule": "* * * * *"
     }
   ],
-  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }],
+  "rewrites": [{ "source": "/((?!api).*)", "destination": "/index.html" }],
   "devCommand": "vite --port $PORT"
 }
